--- a/src/ui/qgsattributetypeedit.ui
+++ b/src/ui/qgsattributetypeedit.ui
@@ -14,17 +14,7 @@
    <string>Edit Widget Properties</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="6" column="1">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
+   <item row="3" column="1">
     <widget class="QStackedWidget" name="stackedWidget"/>
    </item>
    <item row="0" column="1">
@@ -47,8 +37,25 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0" rowspan="7">
+   <item row="0" column="0" rowspan="8">
     <widget class="QListWidget" name="selectionListWidget"/>
+   </item>
+   <item row="7" column="1">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QCheckBox" name="notNullCheckBox">
+     <property name="text">
+      <string>Not Null</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
